[metadata]
name = stix2arango-pkg-theophanedroid
version = 0.1.0
author = theophanedroid
author_email = theodesile@gmail.com
description = A project to insert/request STIX2 objects into ArangoDB 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/theophane-droid/stix2arango
project_urls =
    Bug Tracker = https://github.com/theophane-droid/stix2arango/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .